# AI-Introduction-Course-Project-1

./: MUJOCO_LOG.TXT  bearing.stl  gear.stl  nut.stl  square_gear.stl  方形齿轮.stl  轴承.stl
docs/: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller/lib/controller/: buffer_controller  gbp_mpc_controller  ssa_controller
install/controller/share/controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cplus_dev/include/Robot_classes/: CollisionGeometry.h  robotTree_ETs.h
install/cplus_dev/include/gtsam_factors/: FactorDynamicsState.h  FactorInterRobotDistState.h  FactorPriorSub.h
install/cplus_dev/include/utilities_function/: DataLogger.h  ObstacleSeq.hpp  dist_arm_3D_sphere.h
install/cplus_dev/lib/cplus_dev/: test_GMBP2_method  test_gtsam_method
install/cplus_dev/share/cplus_dev/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
install/franka_bringup/lib/franka_bringup/: generate_scene.py  generate_yolo_dataset.py  mock_vision_node.py  robot_description_topic_publisher.py
install/franka_bringup/share/franka_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/franka_description/share/franka_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/franka_example_controllers/include/franka_example_controllers/: franka_example_controllers_parameters.hpp
install/franka_example_controllers/share/franka_example_controllers/: franka_example_controllers.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/franka_hardware/share/franka_hardware/: franka_hardware.xml  franka_mj_hardware.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/franka_ik_py/share/franka_ik_py/: package.bash  package.dsv  package.sh  package.zsh
install/franka_msgs/share/franka_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/franka_robot_state_broadcaster/include/franka_robot_state_broadcaster/: franka_robot_model_broadcaster.hpp  franka_robot_state_broadcaster_parameters.hpp
install/franka_robot_state_broadcaster/share/franka_robot_state_broadcaster/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
legacy_ros1/controller/: CMakeLists.txt  COLCON_IGNORE  package.xml
legacy_ros1/controller/config/: franka_sphere.yaml  gbp_mpc_params.yaml
legacy_ros1/controller/include/controller/: buffer_controller.h
legacy_ros1/controller/launch/: test_gbp_mpc.launch
legacy_ros1/controller/src/: buffer_controller.cpp  controller_node.cpp  gbp_mpc_controller.cpp  rust_controller.cpp  ssa_controller.cpp
log/: latest_build  latest_list
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/: cplus_dev
ros2_ws/src/controller/: CMakeLists.txt  fix_controller.py  fix_includes.py  fix_more.py  migrate_controller.py
ros2_ws/src/controller/config/: MRGBP.yaml
ros2_ws/src/controller/include/controller/: buffer_controller.h
ros2_ws/src/controller/launch/: test_gbp_mpc.launch
ros2_ws/src/controller/src/: buffer_controller.cpp  controller_node.cpp  gbp_mpc_controller.cpp  rust_controller.cpp  ssa_controller.cpp
ros2_ws/src/franka_bringup/: CMakeLists.txt
ros2_ws/src/franka_bringup/config/mixed/: mixed_dual_multimode.yaml  mixed_quad_multimode.yaml
ros2_ws/src/franka_bringup/config/real/: dual_multimode.yaml  single_multimode.yaml
ros2_ws/src/franka_bringup/config/sim/: dual_sim_controllers.yaml  dual_sim_controllers_rl.yaml  single_sim_controllers.yaml
ros2_ws/src/franka_bringup/launch/mixed/: mixed_dual_multimode_franka.launch.py  mixed_quad_multimode_franka.launch.py
ros2_ws/src/franka_bringup/launch/real/: dual_multimode_franka.launch.py  single_multimode_franka.launch.py
ros2_ws/src/franka_bringup/launch/sim/: dual_franka_sim.launch.py  franka_sim.launch.py  launch_mujoco_ros_server.launch  single_franka_sim.launch.py
ros2_ws/src/franka_bringup/scripts/: generate_scene.py  generate_yolo_dataset.py  mock_vision_node.py  part_spawner.py  pick_and_place.py  robot_description_topic_publisher.py  vision_pipeline_placeholder.py  yolo_vision_node.py
ros2_ws/src/franka_bringup/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/franka_bringup/scripts/log/: latest_build
ros2_ws/src/franka_example_controllers/: CMakeLists.txt  franka_example_controllers.xml
ros2_ws/src/franka_hardware/: CMakeLists.txt  franka_mj_hardware_hw_interface.xml
ros2_ws/src/franka_msgs/: CMakeLists.txt
ros2_ws/src/panda_motion_generators/: CMakeLists.txt
ros2_ws/yolo_train/: data.yaml
yolo_train/: data.yaml
yolo_train/labels/train/: classes.txt  image_001.txt  image_002.txt  image_004.txt  image_005.txt  image_007.txt  image_008.txt  image_010.txt  image_011.txt  image_013.txt  image_014.txt  image_016.txt  image_017.txt  image_019.txt  image_020.txt  image_022.txt  image_023.txt  image_025.txt  image_026.txt  image_028.txt  image_029.txt  image_031.txt  image_032.txt  image_034.txt  image_035.txt  image_037.txt  image_038.txt  image_040.txt  image_041.txt  image_043.txt  image_044.txt  image_046.txt  image_047.txt  image_049.txt  image_050.txt  image_052.txt  image_053.txt  image_055.txt  image_056.txt  image_058.txt  (+28 more)
yolo_train/labels/val/: classes.txt  image_003.txt  image_006.txt  image_009.txt  image_012.txt  image_015.txt  image_018.txt  image_021.txt  image_024.txt  image_027.txt  image_030.txt  image_033.txt  image_036.txt  image_039.txt  image_042.txt  image_045.txt  image_048.txt  image_051.txt  image_054.txt  image_057.txt  image_060.txt  image_063.txt  image_066.txt  image_069.txt  image_072.txt  image_075.txt  image_078.txt  image_081.txt  image_084.txt  image_087.txt  image_090.txt  image_093.txt  image_096.txt  image_099.txt
(+3173 files in other folders)
